# kyber

./: .gitignore  CMakeLists.txt  README.md  zedboard.sh
docs/: report.tex  sources.bib
docs/sections/: conclusion.tex  fpga-implementations.tex  fpga-results.tex  fpga-steps.tex  intro.tex  kyber-components.tex  kyber-overview.tex  ntt-optimizations.tex  project-management.tex
hls/: .gitignore  Makefile  api.h  cbd.c  cbd.cpp  cbd.h  diff.txt  fips202.cpp  fips202.h  indcpa.c  indcpa.cpp  indcpa.h  kem.cpp  kem.h  ntt-fpga-opt.cpp  ntt-fpga.cpp  ntt.c  ntt.cpp  ntt.h  out.txt  params.h  poly.cpp  poly.h  polyvec.cpp  polyvec.h  randombytes.cpp  randombytes.h  reduce.c  reduce.cpp  reduce.h  run-ntt-opt.tcl  run-ntt.tcl  run.tcl  run_bitstream.sh  symmetric-shake.c  symmetric-shake.cpp  symmetric.h  top-ntt.cpp  top-ntt.h  top.cpp  (+5 more)
hls/test/: speed_print.cpp  speed_print.h  test_kyber.cpp  test_kyber_cosim.cpp  test_ntt.cpp  test_speed.cpp
ref/: indcpa.c  kem.c  out.txt  params.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.c
ref/test/: test_kyber.c
zedboard/: Makefile  cbd.h  fips202.h  host-ntt.cpp  host.cpp  indcpa.h  kem.h  link.sh  ntt-fpga-opt.cpp  ntt-fpga.cpp  ntt.h  params.h  poly.h  polyvec.h  randombytes.h  reduce.h  symmetric.h  timer.h  top.cpp  top.h  typedefs.h  verify.h
zedboard/test/: test_kyber.cpp  test_ntt.cpp
